--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <spring.ws.version>2.0.0-M1</spring.ws.version>
         <spring.remoting.version>2.0.8</spring.remoting.version>
         <spring.webflow.version>2.0.8.RELEASE</spring.webflow.version>
-
+        <freemarker.version>2.3.17</freemarker.version>
         <junit.version>4.8.2</junit.version>
 		<mockito.version>1.8.4</mockito.version>
 		<hamcrest.version>1.1</hamcrest.version>
@@ -95,6 +95,18 @@
             <version>2.5</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.8.3</version>
+            <scope>compile</scope>
+        </dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
@@ -120,16 +132,28 @@
 			<scope>compile</scope>
 		</dependency>
         <dependency>
-			<groupId>org.apache.velocity</groupId>
-			<artifactId>velocity</artifactId>
-			<version>1.5</version>
-			<scope>compile</scope>
-		</dependency>
-        <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
             <version>2.1_3</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>${freemarker.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>jetty</artifactId>
+            <version>6.1.21</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>jsp-2.1-jetty</artifactId>
+            <version>6.1.21</version>
+            <scope>provided</scope>
         </dependency>
 
 		<!-- scope: test -->
