--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <junit.version>4.8.2</junit.version>
 		<mockito.version>1.8.4</mockito.version>
 		<hamcrest.version>1.1</hamcrest.version>
+        <jackson.version>1.8.3</jackson.version>
     </properties>
 
     <dependencies>
@@ -141,6 +142,17 @@
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
             <version>${freemarker.version}</version>
+        </dependency>
+        <!-- Jackson provides JSON/POJO mapping -->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
 
         <dependency>
