Modernize project to Spring Boot 3.5.0 and update package structure
- Upgrade from Spring MVC 3.1.1 to Spring Boot 3.5.0
- Update Java version from 8 to 17
- Update package names from com.winkball.whiteboard to io.andylee.whiteboard
- Replace individual Spring dependencies with Boot starters
- Add Spring Boot main application class
- Modernize Maven configuration and dependencies
- Add comprehensive README.md with modernization roadmap
- Add MIT license
- Add AGENT.md for AI agent development guidelines
- Update FreeMarker templates location for Spring Boot
- Modernize test launcher to use Spring Boot

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,7 @@
         <init-param>
             <param-name>contextConfigLocation</param-name>
             <param-value>
-                com.winkball.whiteboard
+                io.andylee.whiteboard
             </param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
