Actually move the folders after the package renaming...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,6 @@ logging.level.org.springframework=INFO
 logging.level.org.apache.xmlrpc=INFO
 
 # Application Configuration
-whiteboard.trac.url=https://trac.winkball.com:555/login/xmlrpc
+whiteboard.trac.url=
 whiteboard.trac.username=
 whiteboard.trac.password=
